--- a/inbox/package.json
+++ b/inbox/package.json
@@ -12,7 +12,7 @@
     "ganache-cli": "^6.3.0",
     "mocha": "^6.0.1",
     "solc": "^0.4.17",
-    "truffle-hdwallet-provider": "^1.0.4",
+    "truffle-hdwallet-provider": "0.0.3",
     "truffle-hdwallet-provider-privkey": "^1.0.3",
     "web3": "^1.0.0-beta.35"
   }
