--- a/05_campaign/package.json
+++ b/05_campaign/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fs-extra": "^7.0.1",
+    "ganache-cli": "^6.4.0",
+    "mocha": "^6.0.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
+    "solc": "^0.4.25",
     "web3": "^1.0.0-beta.35"
   },
   "scripts": {
