--- a/05_campaign/package.json
+++ b/05_campaign/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "04_lotto-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "fs-extra": "^7.0.1",
-    "ganache-cli": "^6.4.0",
-    "mocha": "^6.0.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "solc": "^0.4.25",
-    "web3": "^1.0.0-beta.35"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "05_campaign",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"fs-extra": "^7.0.1",
+		"ganache-cli": "^6.4.0",
+		"mocha": "^6.0.2",
+		"react": "^16.8.3",
+		"react-dom": "^16.8.3",
+		"react-scripts": "2.1.5",
+		"solc": "^0.4.25",
+		"web3": "^1.0.0-beta.35"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
