--- a/05_campaign/package.json
+++ b/05_campaign/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"fs-extra": "^7.0.1",
-		"ganache-cli": "^6.4.0",
+		"ganache-cli": "^6.4.1",
 		"mocha": "^6.0.2",
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3",
@@ -15,7 +15,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "mocha",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
