--- a/05_campaign/package.json
+++ b/05_campaign/package.json
@@ -10,6 +10,8 @@
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3",
 		"react-scripts": "2.1.5",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^0.85.0",
 		"solc": "^0.4.25",
 		"truffle-hdwallet-provider": "0.0.3",
 		"web3": "^1.0.0-beta.35"
@@ -24,5 +26,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
