--- a/05_campaign/package.json
+++ b/05_campaign/package.json
@@ -7,6 +7,7 @@
 		"ganache-cli": "^6.4.1",
 		"mocha": "^6.0.2",
 		"next": "^4.1.4",
+		"next-routes": "^1.4.2",
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3",
 		"react-scripts": "2.1.5",
@@ -21,15 +22,10 @@
 		"build": "react-scripts build",
 		"test": "mocha",
 		"eject": "react-scripts eject",
-		"dev": "next dev"
+		"dev": "node server.js"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
 }
